--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.2+2
   scrollable_positioned_list: ^0.1.7
+  smooth_page_indicator: ^0.2.0
   
 
 dev_dependencies:
@@ -53,6 +54,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/noImage.jpeg
+    - assets/images/dish.jpeg
+    - assets/images/rest1.jpeg
+    - assets/images/rest2.jpeg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
